# toolkit

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  coverage.xml  pyproject.toml  pytest.ini  requirements-lab.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  task.yml
.github/scripts/: audit_test_markers.py
.github/workflows/: ci.yml  test-audit.yml
_local/: prompt-fix-scout-integration.md
docs/: advanced-workflows.md  config-schema.md  conventions.md  feature-stability.md  notebook-contract.md  publish_check.md  runtime-boundaries.md  template-toolkit.md
docs/adr/: 001-duckdb-engine.md  002-three-layers.md  003-pydantic-config.md  004-parquet-output.md  README.md
examples/: dataset_full.yml  dataset_min.yml
getcosticomunalechilo_csv_f8f8e8/: README.md  dataset.yml  notes.md
getcosticomunalechilo_csv_f8f8e8/sql/: clean.sql  mart.sql
project-example/: dataset.yml
project-example/data/: raw_sample.csv
project-example/sql/: clean.sql
project-example/sql/mart/: mart_provincia_anno.sql  mart_regione_anno.sql
scripts/: audit-imports.py  audit_test_markers.py  code_graph.py  find-contract.sh  generate-contracts-map.py  pre-commit  smoke_install_cli.py  usage_matrix.py
scripts/quality/: check_tests.py  legacy_test_files.txt  strict_test_files.txt
smoke/: README.md
smoke/bdap_ckan_csv/: README.md  dataset.offline.yml  dataset.yml
smoke/bdap_ckan_csv/fixtures/: bdap_ckan_sample.csv
smoke/bdap_ckan_csv/sql/: clean.sql
smoke/bdap_http_csv/: README.md  dataset.offline.yml  dataset.yml
smoke/bdap_http_csv/fixtures/: bdap_sample.csv
smoke/bdap_http_csv/sql/: clean.sql
smoke/finanze_http_zip_2023/: README.md  dataset.yml
smoke/finanze_http_zip_2023/sql/: clean.sql
smoke/ispra_http_csv/: README.md  dataset.yml
smoke/ispra_http_csv/fixtures/: ispra_http_sample.csv
smoke/istat_sdmx_22_289/: README.md  dataset.yml
smoke/istat_sdmx_22_289/sql/: clean.sql
smoke/local_file_csv/: README.md  dataset.yml
smoke/local_file_csv/fixtures/: local_file_sample.csv
smoke/local_file_csv/sql/: clean.sql
smoke/zip_http_csv/: README.md  dataset.yml
smoke/zip_http_csv/fixtures/: irpef_http_sample.csv
smoke/zip_http_csv/sql/: clean.sql
sql/: clean.sql
tests/: _smoke_registry.py  conftest.py  helpers.py  helpers_assert_paths.py  test_artifacts.py  test_artifacts_policy.py  test_batch_cli.py  test_ckan_plugin.py  test_clean_csv_columns.py  test_clean_duckdb_read.py  test_clean_input_selection.py  test_cli_all_commands.py  test_cli_blocker_hints.py  test_cli_inspect.py  test_cli_inspect_paths.py  test_cli_inspect_schema_diff.py  test_cli_json_helpers.py  test_cli_layer.py  test_cli_path_contract.py  test_cli_profile.py  test_cli_query.py  test_cli_resume.py  test_cli_run_init.py  test_cli_scaffold.py  test_cli_scout_url.py  test_cli_smoke_e2e.py  test_cli_status.py  test_cli_years_filter.py  test_cmd_batch.py  test_cmd_init.py  test_cmd_scout.py  test_cmd_url_inspect.py  test_config.py  test_config_helpers.py  test_config_legacy.py  test_config_loading.py  test_cross_year.py  test_csv_read.py  test_csv_read_option_strings.py  test_dataset_loader.py  (+57 more)
tests/fixtures/: it_small.csv  zip_small.csv
tests/fixtures/configs/: ckan-source.yml  empty-sources.yml  mart-only.yml  (+5 more)
toolkit/clean/: __init__.py  _column_rules.py  _helpers.py  duckdb_read.py  generator.py  input_selection.py  read_config.py  read_csv_normalized.py  read_excel.py  read_sql_utils.py  report.py  run.py  sql_execute.py  sql_runner.py  transforms.py  validate.py
toolkit/cli/: _url_probe.py  _url_scout_common.py  app.py  cmd_batch.py  cmd_blocker_hints.py  cmd_gen_sql.py  cmd_init.py  cmd_inspect.py  cmd_layer.py  cmd_profile.py  cmd_query.py  cmd_raw.py  cmd_resume.py  cmd_review_readiness.py  cmd_run.py  cmd_scaffold.py  cmd_scout.py  cmd_scout_url.py  cmd_status.py  cmd_url_inspect.py  cmd_validate.py  common.py  common_flags.py  layer_ops.py  preflight_ops.py  sql_dry_run.py
toolkit/contracts/: __init__.py
toolkit/core/: __init__.py  artifacts.py  column_rules.py  config.py  config_models.py  csv_read.py  csv_shape.py  dataset_loader.py  duckdb_read.py  duckdb_shape.py  exceptions.py  input_file.py  io.py  layer_profile.py  logging.py  manifest.py  metadata.py  multi_year_source.py  parquet.py  paths.py  probe.py  read_csv_normalized.py  read_excel.py  read_sql_utils.py  registry.py  run_context.py  run_record_portability.py  run_records.py  sql_utils.py  support.py  template.py  validation.py  validation_summary.py  validators.py
toolkit/cross/: __init__.py  run.py  validate.py
toolkit/mart/: __init__.py  report.py  run.py  validate.py
toolkit/mcp/: README.md  __init__.py  _schema_utils.py  aggregate_ops.py  cli_adapter.py  contracts.py  discovery.py  errors.py  path_safety.py  raw_ops.py  requirements.txt  schema_ops.py  scout_ops.py  server.py  toolkit_client.py  types.py
toolkit/plugins/: __init__.py  _http_utils.py  api_json_paged.py  ckan.py  html_table.py  http_file.py  http_post_file.py  local_file.py  sdmx.py  sparql.py
toolkit/profile/: __init__.py  _column_profile.py  _sniff_delimiter.py  _sniff_encoding.py  preview.py  raw.py  report.py  suggest.py
toolkit/quality/: pa_csv_quality.py
toolkit/raw/: __init__.py  _fetch_utils.py  extractors.py  run.py  validate.py
toolkit/scaffold/: __init__.py  clean.py  full.py  sources.py
toolkit/scout/: __init__.py  http.py  infer.py  link_extractor.py  probe.py  scaffold.py  sparql.py
(+29 files in other folders)
