[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dataciviclab-toolkit"
dynamic = ["version"]
description = "DataCivicLab Toolkit: RAW -> CLEAN -> MART with DuckDB"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "DataCivicLab" }
]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
  "pyyaml>=6.0.3",
  "pydantic>=2.8.0",
  "pandas>=2.0",
  "openpyxl>=3.1.0",
  "xlrd>=2.0.0",
  "duckdb>=0.10.0",
  "mcp>=1.0",
  "requests>=2.33.1",
  "typer>=0.12.0",
  "rich>=13.0"
]

[project.optional-dependencies]
parquet = [
  "pyarrow>=14.0"
]
dev = [
  "build>=1.4.3",
  "pytest>=8.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.3.0",
  "twine>=5.0.0",
  "xlwt>=1.0.0",
]

[project.scripts]
toolkit = "toolkit.cli.app:app"

[project.urls]
Repository = "https://github.com/dataciviclab/toolkit"
Documentation = "https://github.com/dataciviclab/toolkit"

[tool.setuptools.packages.find]
include = ["toolkit*"]
exclude = ["tests*"]

[tool.setuptools.dynamic]
version = { attr = "toolkit.version.__version__" }

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
