[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dataciviclab-toolkit"
dynamic = ["version"]
description = "DataCivicLab Toolkit: RAW -> CLEAN -> MART with DuckDB"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "DataCivicLab" }
]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
  "pyyaml>=6.0.3",
  "pydantic>=2.8.0",
  "pandas>=2.0",
  "openpyxl>=3.1.0",
  "xlrd>=2.0.0",
  "duckdb>=0.10.0",
  "mcp>=1.0",
  "requests>=2.33.1",
  "typer>=0.12.0",
  "rich>=13.0",
  "lab-connectors[duckdb] @ git+https://github.com/dataciviclab/lab-connectors.git@v0.7.0"
]

[project.optional-dependencies]
parquet = [
  "pyarrow>=14.0"
]
dev = [
  "build>=1.4.3",
  "mypy>=1.20",
  "pytest>=8.0",
  "pytest-cov>=5.0.0",
  "pytest-xdist>=3.0",
  "ruff>=0.3.0",
  "twine>=5.0.0",
  "types-pyyaml>=6.0",
  "types-requests>=2.33",
  "xlwt>=1.0.0",
]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = false
no_implicit_optional = true
ignore_missing_imports = true
disallow_any_unimported = false
disallow_untyped_defs = false

# Validate modules use union types (dict[str, X | dict[str, Any]]) internally
# because _ensure_dict conversion at entry points. The dual type signature
# creates variance issues with nested dict types that need a larger refactor
# of the validate pipeline signatures.
# TODO: clean up after validate module signatures are simplified.
[[tool.mypy.overrides]]
module = [
  "toolkit.mart.validate",
  "toolkit.clean.validate",
  "toolkit.cross.validate",
  "toolkit.clean._column_rules",
  "toolkit.core.layer_profile",
]
disable_error_code = [
  "union-attr",
  "index",
  "arg-type",
  "assignment",
]

[project.scripts]
toolkit = "toolkit.cli.app:app"

[project.urls]
Repository = "https://github.com/dataciviclab/toolkit"
Documentation = "https://github.com/dataciviclab/toolkit"

[tool.setuptools.packages.find]
include = ["toolkit*"]
exclude = ["tests*"]

[tool.setuptools.dynamic]
version = { attr = "toolkit.version.__version__" }

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
